Work in progress for zeek and suricata live capture (squashed commit) see idaholab/Malcolm#109
commit 30ab5eb09e12a52fa8b6049169d25ac201490ab6
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 11:40:48 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit dda60d73031279006e20cee351db381eab6f7ae6
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 11:40:30 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit b08e3e7039ad74fa03502af0baf924f1198fc1fb
Author: SG <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 10:39:08 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 51c8e045b6be0d60ec031649154bb511e71a2172
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 08:26:01 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 35da23a4c6d5a431be54ec345d00785a1d9d70be
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Wed Jul 27 07:00:47 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit b6c99f94e07031ab73657d582eed9dc00f4dea8f
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 17:17:19 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit ce9149e972725958f449da7503dfcd74bdffd642
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 16:30:22 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit 3aec8b5db877a20a763bed4d18fa57520dd394eb
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 16:08:37 2022 -0600

    work in progress for zeek- and suricata- live capture (idaholab/Malcolm#109)

commit a9fe5b22f0404f0c51b592c23bb0581764abc967
Author: Seth Grover <mero.mero.guero@gmail.com>
Date:   Tue Jul 26 15:49:58 2022 -0600

    work in progress for zeek- and suricata- live ca

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,7 +167,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/opensearch.Dockerfile
-    image: malcolmnetsec/opensearch:6.1.1
+    image: malcolmnetsec/opensearch:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -209,7 +209,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards-helper.Dockerfile
-    image: malcolmnetsec/dashboards-helper:6.1.1
+    image: malcolmnetsec/dashboards-helper:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -240,7 +240,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/dashboards.Dockerfile
-    image: malcolmnetsec/dashboards:6.1.1
+    image: malcolmnetsec/dashboards:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -266,7 +266,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:6.1.1
+    image: malcolmnetsec/logstash-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -318,7 +318,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:6.1.1
+    image: malcolmnetsec/filebeat-oss:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -332,6 +332,7 @@ services:
       << : *common-upload-variables
       << : *common-beats-variables
       FILEBEAT_ZEEK_LOG_PATH : '/data/zeek/current'
+      FILEBEAT_ZEEK_LOG_LIVE_PATH : '/data/zeek/live'
       FILEBEAT_SURICATA_LOG_PATH : '/data/suricata'
       FILEBEAT_NGINX_LOG_PATH : '/data/nginx'
     depends_on:
@@ -357,7 +358,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/arkime.Dockerfile
-    image: malcolmnetsec/arkime:6.1.1
+    image: malcolmnetsec/arkime:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -403,7 +404,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/zeek.Dockerfile
-    image: malcolmnetsec/zeek:6.1.1
+    image: malcolmnetsec/zeek:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -438,7 +439,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/suricata.Dockerfile
-    image: malcolmnetsec/suricata:6.1.1
+    image: malcolmnetsec/suricata:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -466,7 +467,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:6.1.1
+    image: malcolmnetsec/file-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -494,7 +495,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:6.1.1
+    image: malcolmnetsec/pcap-capture:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -517,7 +518,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-monitor.Dockerfile
-    image: malcolmnetsec/pcap-monitor:6.1.1
+    image: malcolmnetsec/pcap-monitor:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -545,7 +546,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:6.1.1
+    image: malcolmnetsec/file-upload:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
@@ -573,7 +574,7 @@ services:
       retries: 3
       start_period: 60s
   htadmin:
-    image: malcolmnetsec/htadmin:6.1.1
+    image: malcolmnetsec/htadmin:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -600,7 +601,7 @@ services:
       retries: 3
       start_period: 60s
   freq:
-    image: malcolmnetsec/freq:6.1.1
+    image: malcolmnetsec/freq:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/freq.Dockerfile
@@ -623,7 +624,7 @@ services:
       retries: 3
       start_period: 60s
   name-map-ui:
-    image: malcolmnetsec/name-map-ui:6.1.1
+    image: malcolmnetsec/name-map-ui:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/name-map-ui.Dockerfile
@@ -649,7 +650,7 @@ services:
       retries: 3
       start_period: 60s
   api:
-    image: malcolmnetsec/api:6.1.1
+    image: malcolmnetsec/api:6.2.0
     build:
       context: .
       dockerfile: Dockerfiles/api.Dockerfile
@@ -675,7 +676,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:6.1.1
+    image: malcolmnetsec/nginx-proxy:6.2.0
     restart: "no"
     stdin_open: false
     tty: true
