set suricata run directory correctly

--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -60,6 +60,7 @@ command=/usr/bin/suricata
   -c "%(ENV_SURICATA_CONFIG_FILE)s"
   -l "%(ENV_SURICATA_LOG_DIR)s/live"
   --af-packet
+directory=%(ENV_SURICATA_RUN_DIR)s
 autostart=%(ENV_SURICATA_LIVE_CAPTURE)s
 autorestart=true
 startsecs=180
