work in progress on fluent-bit bash

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -48,7 +48,7 @@ filter {
     mutate { id => "mutate_replace_agent_type_beats_filebeat_nginx"
              replace => { "[agent][type]" => "nginx" } }
 
-  } else if ("_malcolm_miscbeat" in [tags]) {
+  } else if ("_malcolm_miscbeat" in [tags]) or ([miscbeat]) {
     #############################################################################################################################
     # misc. sensor metrics and logs from fluentbit received by filebeat TCP input
     # https://docs.fluentbit.io/manual/
