put some basic parsing in for windows event logs

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -561,6 +561,7 @@ filter {
 
       mutate { id => "mutate_rename_miscbeat_winlog"
                rename => { "[miscbeat][winlog][EventID]" => "[event][id]" }
+               rename => { "[miscbeat][winlog][Channel]" => "[event][dataset]" }
                rename => { "[miscbeat][winlog][RecordNumber]" => "[miscbeat][winlog][EventRecordID]" }
                rename => { "[miscbeat][winlog][EventCategory]" => "[miscbeat][winlog][Task]" }
                rename => { "[miscbeat][winlog][ComputerName]" => "[miscbeat][winlog][Computer]" }
@@ -590,10 +591,11 @@ filter {
         fingerprint {
           id => "fingerprint_malcolm_miscbeat_winlog"
           source => [ "[host][name]",
-                      "[event][module]",
+                      "[agent][type]",
+                      "[event][dataset]",
                       "[miscbeat][winlog][Computer]",
                       "[miscbeat][winlog][ProviderName]",
-                      "[miscbeat][winlog][EventID]",
+                      "[event][id]",
                       "[miscbeat][winlog][EventRecordID]",
                       "[event][original]",
                       "[@timestamp]" ]
