Work in progress on switching to ICNPP-S7comm parser (https://github.com/cisagov/icsnpp-s7comm)

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1644,33 +1644,33 @@ filter {
       }
     }
 
-  } else if ([log_source] == "iso_cotp") {
+  } else if ([log_source] == "cotp") {
     #############################################################################################################################
-    # iso_cotp.log
-    # https://github.com/amzn/zeek-plugin-s7comm/blob/master/scripts/main.zeek
+    # cotp.log
+    # https://github.com/cisagov/icsnpp-s7comm
 
     dissect {
-      id => "dissect_zeek_iso_cotp"
+      id => "dissect_zeek_cotp"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][pdu_type]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][pdu_code]}	%{[zeek_cols][pdu_name]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
       mutate {
-        id => "mutate_split_zeek_iso_cotp"
+        id => "mutate_split_zeek_cotp"
         # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
         split => { "[message]" => "	" }
       }
       ruby {
-        id => "ruby_zip_zeek_iso_cotp"
-        init => "$zeek_iso_cotp_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'pdu_type' ]"
-        code => "event.set('[zeek_cols]', $zeek_iso_cotp_field_names.zip(event.get('[message]')).to_h)"
+        id => "ruby_zip_zeek_cotp"
+        init => "$zeek_cotp_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'pdu_code', 'pdu_name' ]"
+        code => "event.set('[zeek_cols]', $zeek_cotp_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
     mutate {
-      id => "mutate_add_fields_zeek_iso_cotp"
+      id => "mutate_add_fields_zeek_cotp"
       add_field =>  { "[zeek_cols][service]" => "cotp" }
       add_tag => [ "ics" ]
     }
@@ -2787,13 +2787,13 @@ filter {
   } else if ([log_source] == "s7comm") {
     #############################################################################################################################
     # s7comm.log
-    # https://github.com/amzn/zeek-plugin-s7comm/blob/master/scripts/main.zeek
+    # https://github.com/cisagov/icsnpp-s7comm
 
     dissect {
       id => "dissect_zeek_s7comm"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][rosctr]}	%{[zeek_cols][parameter]}	%{[zeek_cols][item_count]}	%{[zeek_cols][data_info]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}%{[zeek_cols][rosctr_code]}	%{[zeek_cols][rosctr_name]}	%{[zeek_cols][pdu_reference]}	%{[zeek_cols][function_code]}	%{[zeek_cols][function_name]}	%{[zeek_cols][subfunction_code]}	%{[zeek_cols][subfunction_name]}	%{[zeek_cols][error_class]}	%{[zeek_cols][error_code]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2804,13 +2804,81 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_s7comm"
-        init => "$zeek_s7comm_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'rosctr', 'parameter', 'item_count', 'data_info' ]"
+        init => "$zeek_s7comm_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'rosctr_code', 'rosctr_name', 'pdu_reference', 'function_code', 'function_name', 'subfunction_code', 'subfunction_name', 'error_class', 'error_code' ]"
         code => "event.set('[zeek_cols]', $zeek_s7comm_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
     mutate {
       id => "mutate_add_fields_zeek_s7comm"
+      add_field => {
+        "[zeek_cols][proto]" => "tcp"
+        "[zeek_cols][service]" => "s7comm"
+      }
+      add_tag => [ "ics" ]
+    }
+
+  } else if ([log_source] == "s7comm_plus") {
+    #############################################################################################################################
+    # s7comm_plus.log
+    # https://github.com/cisagov/icsnpp-s7comm
+
+    dissect {
+      id => "dissect_zeek_s7comm_plus"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}%{[zeek_cols][version]}	%{[zeek_cols][opcode]}	%{[zeek_cols][opcode_name]}	%{[zeek_cols][function_code]}	%{[zeek_cols][function_name]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_s7comm_plus"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_s7comm_plus"
+        init => "$zeek_s7comm_plus_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'version', 'opcode', 'opcode_name', 'function_code', 'function_name' ]"
+        code => "event.set('[zeek_cols]', $zeek_s7comm_plus_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_s7comm_plus"
+      add_field => {
+        "[zeek_cols][proto]" => "tcp"
+        "[zeek_cols][service]" => "s7comm"
+      }
+      add_tag => [ "ics" ]
+    }
+
+  } else if ([log_source] == "s7comm_read_szl") {
+    #############################################################################################################################
+    # s7comm_read_szl.log
+    # https://github.com/cisagov/icsnpp-s7comm
+
+    dissect {
+      id => "dissect_zeek_s7comm_read_szl"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][pdu_reference]}	%{[zeek_cols][method]}	%{[zeek_cols][szl_id]}	%{[zeek_cols][szl_id_name]}	%{[zeek_cols][szl_index]}	%{[zeek_cols][return_code]}	%{[zeek_cols][return_code_name]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_s7comm_read_szl"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_s7comm_read_szl"
+        init => "$zeek_s7comm_read_szl_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'pdu_reference', 'method', 'szl_id', 'szl_id_name', 'szl_index', 'return_code', 'return_code_name' ]"
+        code => "event.set('[zeek_cols]', $zeek_s7comm_read_szl_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_s7comm_read_szl"
       add_field => {
         "[zeek_cols][proto]" => "tcp"
         "[zeek_cols][service]" => "s7comm"
@@ -5000,32 +5068,6 @@ filter {
     mutate { id => "mutate_split_zeek_rdp_client_channels"
              split => { "[zeek][rdp][client_channels]" => "," } }
 
-
-  } else if ([log_source] == "s7comm") {
-    #############################################################################################################################
-    # s7comm.log specific logic
-
-    if ([zeek][s7comm][parameter]) {
-      ruby {
-        id => "ruby_zeek_s7comm_parse_parameter"
-        code => "
-          parameterHash = event.get('[zeek][s7comm][parameter]').split(',').each_with_object({}) do |a, hash|
-            key,value = a.split(/\s*=\s*/)
-            hash[key] = value
-          end
-          event.set('[zeek][s7comm][parameters]', parameterHash)"
-      }
-      mutate { id => "mutate_split_field_s7comm_parameter"
-               split => { "[zeek][s7comm][parameter]" => "," } }
-    }
-
-    if ([zeek][s7comm][data_info] == "Null") {
-      mutate { id => "mutate_remove_field_s7comm_data_info_null"
-               remove_field => [ "[zeek][s7comm][data_info]" ] }
-    } else if ([zeek][s7comm][data_info]) {
-      mutate { id => "mutate_split_field_s7comm_data_info"
-               split => { "[zeek][s7comm][data_info]" => "," } }
-    }
 
   } else if ([log_source] == "signatures") {
     #############################################################################################################################
