--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -286,8 +286,8 @@ filter {
   if ([zeek][irc][command])                      { mutate { id => "mutate_merge_normalize_zeek_irc_command"
                                                            merge => { "[event][action]" => "[zeek][irc][command]" } } }
 
-  if ([zeek][iso_cotp][pdu_type])                { mutate { id => "mutate_merge_normalize_zeek_iso_cotp_pdu_type"
-                                                           merge => { "[event][action]" => "[zeek][iso_cotp][pdu_type]" } } }
+  if ([zeek][cotp][pdu_name])                    { mutate { id => "mutate_merge_normalize_zeek_cotp_pdu_type"
+                                                           merge => { "[event][action]" => "[zeek][cotp][pdu_name]" } } }
 
   if ([zeek][kerberos][request_type])            { mutate { id => "mutate_merge_normalize_zeek_kerberos_request_type"
                                                            merge => { "[event][action]" => "[zeek][kerberos][request_type]" } } }
