--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -466,12 +466,14 @@ filter {
       ("enip" in [network][protocol]) or
       ("ethercat" in [network][protocol]) or
       ("genisys" in [network][protocol]) or
-      ("iso_cotp" in [network][protocol]) or
+      ("cotp" in [network][protocol]) or
       ("opcua-binary" in [network][protocol]) or
       ("modbus" in [network][protocol]) or
       ("profinet" in [network][protocol]) or
       ("profinet_dce_rpc" in [network][protocol]) or
-      ("s7comm" in [network][protocol])) {
+      ("s7comm" in [network][protocol]) or
+      ("s7comm_plus" in [network][protocol]) or
+      ("s7comm_read_szl" in [network][protocol])) {
     mutate { id => "mutate_add_tag_ics_from_network_protocol"
              add_tag => [ "ics" ] }
   }
