replace amazon s7comm parser with icsnpp-s7comm

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1671,7 +1671,10 @@ filter {
 
     mutate {
       id => "mutate_add_fields_zeek_cotp"
-      add_field =>  { "[zeek_cols][service]" => "cotp" }
+      add_field =>  {
+        "[zeek_cols][proto]" => "tcp"
+        "[zeek_cols][service]" => "cotp"
+      }
       add_tag => [ "ics" ]
     }
 
@@ -2847,7 +2850,7 @@ filter {
       id => "mutate_add_fields_zeek_s7comm_plus"
       add_field => {
         "[zeek_cols][proto]" => "tcp"
-        "[zeek_cols][service]" => "s7comm"
+        "[zeek_cols][service]" => "s7comm_plus"
       }
       add_tag => [ "ics" ]
     }
@@ -5067,6 +5070,14 @@ filter {
 
     mutate { id => "mutate_split_zeek_rdp_client_channels"
              split => { "[zeek][rdp][client_channels]" => "," } }
+
+  } else if ([log_source] == "s7comm_read_szl") {
+    #############################################################################################################################
+    # s7comm_read_szl.log specific logic
+
+    # so we can link s7comm and s7comm_read_szl by this field
+    mutate { id => "mutate_rename_zeek_s7comm_read_szl_pdu_reference"
+             rename => { "[zeek][s7comm_read_szl][pdu_reference]" => "[zeek][s7comm][pdu_reference]" } }
 
 
   } else if ([log_source] == "signatures") {
