--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -131,6 +131,9 @@ filter {
   if ([zeek][rdp][client_build])                 { mutate { id => "mutate_merge_normalize_zeek_rdp_client_build"
                                                            merge => { "[network][protocol_version]" => "[zeek][rdp][client_build]" } } }
 
+  if ([zeek][s7comm_plus][version])              { mutate { id => "mutate_merge_normalize_zeek_s7comm_plus_version"
+                                                           merge => { "[network][protocol_version]" => "[zeek][s7comm_plus][version]" } } }
+
   if ([zeek][smb_cmd][version])                  { mutate { id => "mutate_merge_normalize_zeek_smb_cmd_version"
                                                            merge => { "[network][protocol_version]" => "[zeek][smb_cmd][version]" } } }
 
@@ -381,6 +384,46 @@ filter {
              add_field => { "[@metadata][zeek_rfb_auth_action]" => "Authenticate" } }
     mutate { id => "mutate_merge_zeek_rfb_auth_action"
              merge => { "[event][action]" => "[@metadata][zeek_rfb_auth_action]" } }
+  }
+
+  if ([zeek][s7comm]) {
+    ruby {
+      # action = rosctr_name:function_name:subfunction_name
+      id => "ruby_zeek_s7comm_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[event][action]'))
+        action = [event.get('[zeek][s7comm][rosctr_name]'),
+                  event.get('[zeek][s7comm][function_name]'),
+                  event.get('[zeek][s7comm][subfunction_name]')].compact.join(':')
+        actions.append(action) unless action.nil? || action&.empty?
+        event.set('[event][action]', actions)"
+    }
+  }
+
+  if ([zeek][s7comm_plus]) {
+    ruby {
+      # action = opcode:function
+      id => "ruby_zeek_s7comm_plus_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[event][action]'))
+        if (opcodeName = event.get('[zeek][s7comm_plus][opcode_name]').to_s).start_with?('Unknown') then
+          opcodeName = event.get('[zeek][s7comm_plus][opcode]')
+        end
+        if (functionName = event.get('[zeek][s7comm_plus][function_name]').to_s).start_with?('Unknown') then
+          functionName = event.get('[zeek][s7comm_plus][function_code]')
+        end
+        action = [opcodeName, functionName].reject{ |e| e.nil? || e&.empty? }.join(':')
+        actions.append(action) unless action.nil? || action&.empty?
+        event.set('[event][action]', actions)"
+    }
+  }
+
+
+  if ([zeek][s7comm_read_szl][szl_id_name]) {
+    mutate { id => "mutate_add_field_metadata_zeek_s7comm_read_szl_action"
+             add_field => { "[@metadata][s7comm_read_szl_action]" => "Read-SZL %{[zeek][s7comm_read_szl][szl_id_name]}" } }
+    mutate { id => "mutate_merge_zeek_s7comm_read_szl_action"
+             merge => { "[event][action]" => "[@metadata][s7comm_read_szl_action]" } }
   }
 
   if ([zeek][sip][method]) { mutate { id => "mutate_merge_normalize_zeek_sip_method"
@@ -782,6 +825,28 @@ filter {
 
   if ([zeek][rdp][result]) { mutate { id => "mutate_merge_normalize_zeek_rdp_result"
                                             merge => { "[event][result]" => "[zeek][rdp][result]" } } }
+
+  if ([zeek][s7comm]) {
+    if ([zeek][s7comm][error_class] == 'No error') {
+      mutate { id => "mutate_add_field_zeek_s7comm_success"
+               add_field => { "[@metadata][zeek_s7comm_success]" => "Success" } }
+      mutate { id => "mutate_merge_field_zeek_s7comm_success"
+               merge => { "[event][result]" => "[@metadata][zeek_s7comm_success]" } }
+    } else if ([zeek][s7comm][error_class]) {
+      mutate { id => "mutate_merge_zeek_s7comm_non_status"
+               merge => { "[event][result]" => "[zeek][s7comm][error_class]" } }
+    }
+  }
+
+  if ([zeek][s7comm_read_szl]) {
+    if ([zeek][s7comm_read_szl][return_code_name]) {
+      mutate { id => "mutate_merge_zeek_s7comm_read_szl_return_code_name_result"
+               merge => { "[event][result]" => "[zeek][s7comm_read_szl][return_code_name]" } }
+    } else if ([zeek][s7comm_read_szl][return_code]) {
+      mutate { id => "mutate_merge_zeek_s7comm_read_szl_return_code_result"
+               merge => { "[event][result]" => "[zeek][s7comm_read_szl][return_code]" } }
+    }
+  }
 
   if ([zeek][sip][status_code]) {
     # normalized version of sip reply code (status_msg may be unpredictable)
