set userAuthIps to work with docker

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -9,6 +9,7 @@ cronQueries=true
 rotateIndex=daily
 passwordSecret=Malcolm
 httpRealm=Arkime
+userAuthIps=::,0.0.0.0/0
 interface=eth0
 wiseHost=127.0.0.1
 wisePort=8081
