--- a/logstash/pipelines/output/99_opensearch_output.conf
+++ b/logstash/pipelines/output/99_opensearch_output.conf
@@ -1,7 +1,7 @@
 output {
   opensearch {
     id => "output_opensearch_malcolm"
-    hosts => "${OS_HOSTS:opensearch:9200}"
+    hosts => "${OPENSEARCH_HOST_AND_PORT:opensearch:9200}"
     manage_template => false
     index => "%{[@metadata][malcolm_opensearch_index_prefix]}-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{[event][hash]}"
