don't do SSL certificate checking for self-signed certificates from Malcolm client connections

--- a/logstash/pipelines/output/99_opensearch_output.conf
+++ b/logstash/pipelines/output/99_opensearch_output.conf
@@ -2,6 +2,7 @@ output {
   opensearch {
     id => "output_opensearch_malcolm"
     hosts => "${OPENSEARCH_URL:http://opensearch:9200}"
+    ssl_certificate_verification => false
     manage_template => false
     index => "%{[@metadata][malcolm_opensearch_index_prefix]}-%{+YYMMdd}"
     document_id => "%{+YYMMdd}-%{[event][hash]}"
