use network.direction instead of cluttering tags

--- a/arkime/etc/config.orig.ini
+++ b/arkime/etc/config.orig.ini
@@ -91,6 +91,7 @@ event.risk_score=db:event.risk_score;group:malcolm;kind:float;friendly:Risk Scor
 event.risk_score_norm=db:event.risk_score_norm;group:malcolm;kind:float;friendly:Risk Score (Normalized);help:Risk Score (Normalized)
 event.severity=db:event.severity;group:malcolm;kind:integer;friendly:Severity;help:Severity
 event.severity_tags=db:event.severity_tags;group:malcolm;kind:termfield;friendly:Severity Tags;help:Severity Tags
+network.direction=db:network.direction;group:malcolm;kind:termfield;friendly:Direction;help:Direction
 network.inner.vlan.id=db:network.inner.vlan.id;group:malcolm;kind:integer;friendly:Inner VLAN ID;help:Inner VLAN ID
 network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Service;help:Service
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
