--- a/logstash/pipelines/enrichment/19_severity.conf
+++ b/logstash/pipelines/enrichment/19_severity.conf
@@ -16,19 +16,19 @@ filter {
                add_field => { "[event][severity_tags]" => "Cross-segment traffic" } }
     }
 
-    # inbound/outbound/internal/external connection based on previously-populated tag
+    # inbound/outbound/internal/external connection based on previously-populated network.direction value
     if ([event][provider] != "zeek") or ([event][dataset] != "files") {
-      # files.log is excluded here because tx_hosts and tx_hosts doesn't really indicate the direction of the connection itself
-      if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
+      # zeek's files.log is excluded here because tx_hosts and tx_hosts doesn't really indicate the direction of the connection itself
+      if ([network][direction] == "internal") {
         mutate { id => "mutate_add_field_severity_item_internal"
                  add_field => { "[event][severity_tags]" => "Internal traffic" } }
-      } else if ("external_source" in [tags]) and ("external_destination" in [tags]) {
+      } else if ([network][direction] == "external") {
         mutate { id => "mutate_add_field_severity_item_external"
                  add_field => { "[event][severity_tags]" => "External traffic" } }
-      } else if ("internal_source" in [tags]) and ("external_destination" in [tags]) {
+      } else if ([network][direction] == "outbound") {
         mutate { id => "mutate_add_field_severity_item_outbound"
                  add_field => { "[event][severity_tags]" => "Outbound traffic" } }
-      } else if ("external_source" in [tags]) and ("internal_destination" in [tags]) {
+      } else if ([network][direction] == "inbound") {
         mutate { id => "mutate_add_field_severity_item_inbound"
                  add_field => { "[event][severity_tags]" => "Inbound traffic" } }
       }
