--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -253,6 +253,33 @@ filter {
     }
   } # if ([destination][ip])
 
+  # network.direction (from tags assigned above)
+  if ("internal_source" in [tags]) and ("internal_destination" in [tags]) {
+    mutate { id => "mutate_add_field_metadata_network_direction_internal"
+             add_field => { "[@metadata][network_direction]" => "internal" } }
+  } else if ("external_source" in [tags]) and ("external_destination" in [tags]) {
+    mutate { id => "mutate_add_field_metadata_network_direction_external"
+             add_field => { "[@metadata][network_direction]" => "external" } }
+  } else if ("internal_source" in [tags]) and ("external_destination" in [tags]) {
+    mutate { id => "mutate_add_field_metadata_network_direction_outbound"
+             add_field => { "[@metadata][network_direction]" => "outbound" } }
+  } else if ("external_source" in [tags]) and ("internal_destination" in [tags]) {
+    mutate { id => "mutate_add_field_metadata_network_direction_inbound"
+             add_field => { "[@metadata][network_direction]" => "inbound" } }
+  }
+  if ([@metadata][network_direction]) {
+    mutate { id => "mutate_add_field_ecs_network_direction"
+             add_field => { "[network][direction]" => "%{[@metadata][network_direction]}" } }
+    mutate { id => "mutate_enrichment_tags_remove_direction"
+             remove_tag => [ "internal_source",
+                             "internal_destination",
+                             "external_source",
+                             "external_destination" ] }
+  } else {
+    mutate { id => "mutate_add_field_ecs_network_direction_unknown"
+             add_field => { "[network][direction]" => "unknown" } }
+  }
+
   if ([dns][host]) {
     # if requested, look up DNS queries using freq_server.py to get entropy scores
 
